fixes min-width on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -105,7 +105,7 @@ img {
     left: setting(bezel-website); 
     right: setting(bezel-website);
     max-height: calc(100% - #{(setting(bezel-website) * 2)});
-    min-width: none;
+    min-width: auto;
     height: auto;
     
   }
